<?xml version="1.0" encoding="utf-8"?>
<com.emilsjolander.components.StickyScrollViewItems.StickyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.personal.yornel.androids.app.DetailsActivity"
    android:id="@+id/scrollView"
    tools:showIn="@layout/activity_smartphone_details">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="24dp"
                android:id="@+id/smartphone_image"
                android:src="@drawable/smartphone"
                android:transitionName="@string/transition_name_phone"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/icon_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/title_screen"
                            android:text="Inches"
                            android:transitionName="@string/transition_name_inches"
                            android:lines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextCardTitle" />

                        <TextView
                            android:id="@+id/title_content_screen"
                            android:text="Resolution"
                            android:maxLines="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/icon_ram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/title_ram"
                            android:text="Ram"
                            android:transitionName="@string/transition_name_ram"
                            android:lines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextCardTitle" />

                        <TextView
                            android:id="@+id/title_content_ram"
                            android:text="Rom"
                            android:maxLines="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/icon_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/title_processor"
                            android:text="Processor"
                            android:transitionName="@string/transition_name_processor"
                            android:lines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextCardTitle" />

                        <TextView
                            android:id="@+id/title_content_processor"
                            android:text="Frequency"
                            android:maxLines="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/icon_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/title_version"
                            android:text="Version"
                            android:transitionName="@string/transition_name_version"
                            android:lines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextCardTitle" />

                        <TextView
                            android:id="@+id/title_content_version"
                            android:text="Version"
                            android:maxLines="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/smartphone_full_details" />

    </LinearLayout>

</com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>
